...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="目前已搜集" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bp7-aT-JkZ">
                                <rect key="frame" x="144" y="283" width="127" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0首歌" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vn5-Kb-qpr">
                                <rect key="frame" x="180" y="356" width="54" height="24"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dx4-Vy-yw1">
                                <rect key="frame" x="281" y="287" width="22" height="22"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dg7-OW-QZI">
                                <rect key="frame" x="190" y="430" width="35" height="33"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="清除">
                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
...
                            <constraint firstItem="bp7-aT-JkZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dZD-Oy-gZc"/>
                            <constraint firstItem="Dx4-Vy-yw1" firstAttribute="leading" secondItem="bp7-aT-JkZ" secondAttribute="trailing" constant="10" id="jN5-C9-oZg"/>
                            <constraint firstItem="dg7-OW-QZI" firstAttribute="top" secondItem="vn5-Kb-qpr" secondAttribute="bottom" multiplier="1:0.9" constant="8" symbolic="YES" id="svF-Mc-DTi"/>
                            <constraint firstItem="vn5-Kb-qpr" firstAttribute="top" secondItem="bp7-aT-JkZ" secondAttribute="bottom" multiplier="1:0.9" constant="8" symbolic="YES" id="vim-hp-QzV"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="歌曲搜集" prompt="" id="7Z9-Vh-YRs">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="0oo-x1-yQI">
                            <connections>
                                <action selector="goToSearchMusicsVC:" destination="BYZ-38-t0r" id="92A-HO-VAW"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            </tableView>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="61a-Yc-rmb">
                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                                <items>
                                    <navigationItem id="aIq-DK-FQ1">
                                        <nil key="title"/>
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="bfA-k3-Ut3">
                                            <connections>
                                                <action selector="backToTotalCountVC:" destination="dxF-Tb-lHX" id="tUC-fW-9Vb"/>
                                            </connections>
                                        </barButtonItem>
                                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="typing your fav. music..." textAlignment="natural" minimumFontSize="17" id="3Rf-XZ-Ncp">
                                            <rect key="frame" x="120.00000000000001" y="7" width="174.33333333333334" height="30"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="textField" label="textField">
                                                <bool key="isElement" value="YES"/>
                                            </accessibility>
                                            <nil key="textColor"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
                                        </textField>
...
