...
        self.totalCount = 0
        totalCountsLabel.text = "\(self.totalCount)首歌"
    }
    
    func showDetails(){
        let alert = UIAlertController(title: nil, message: "點選右上角的加號，即可新增歌曲。", preferredStyle: UIAlertControllerStyle.alert)
        alert.addAction(UIAlertAction(title: "Got It!", style: UIAlertActionStyle.default, handler: nil))
        present(alert, animated: true, completion: nil)
        
    }
    
    @IBAction func goToSearchMusicsVC(_ sender: UIBarButtonItem) {
        
...
