...
        task.resume()
        
    }
    
    private func UITesting() -> Bool {
        
        if let environmentString = ProcessInfo.processInfo.environment["For UI-TEST"]{
        
            print(environmentString)
        }
        
        return ProcessInfo.processInfo.arguments.contains("UI-TESTING")
    }
...
