...
}

extension SearchMusicViewController: UITableViewDelegate{
    
    func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        
        let addAction = UITableViewRowAction(style: UITableViewRowActionStyle.default, title: "加入"){
            action,Index in
            
            action.backgroundColor = UIColor.gray
            
            self.increaseCurrentCount()
            self.tableView.reloadRows(at: [indexPath], with: .automatic)
...
